# study-automata

./: .gitignore  README.md
content/: CMakeLists.txt  main.cpp
content/examples/minimization/: mealy-min_in_1.csv  mealy-min_out_1.csv  moore-min_in.csv
content/examples/transform/: mealy-to-moore_in_2.csv  moore-to-mealy_out_1.csv  moore-to-mealy_out_2.csv
content/include/ArgParse/: ParseArgs.h
content/include/Automata/: MealyMooreTable.hpp  MealyTable.hpp  MealyTableReader.hpp  State.hpp
content/src/Argparse/: ParseArgs.cpp
convertion/: CMakeLists.txt  convertion.sln  convertion.vcxproj  convertion.vcxproj.filters  main.cpp
convertion/examples/: mealy-to-moore_out_1.csv  mealy-to-moore_out_2.csv
convertion/include/: pch.h
convertion/include/ArgParse/: ParseArgs.h
convertion/include/Automata/: MealyMooreTable.hpp  MealyTable.hpp  MooreTable.hpp  MooreTableReader.hpp  State.hpp
convertion/src/Argparse/: ParseArgs.cpp
